# microservices-observability-failure-playground

./: AGENTS.md  README.md  coverage-policy-pr.yml  coverage-policy.yml  docker-compose.audit.yml  docker-compose.kafka.yml  docker-compose.notification.yml  docker-compose.s001.yml  docker-compose.s002.yml  docker-compose.s003.yml  docker-compose.s004.yml  docker-compose.s005.yml  docker-compose.s006.yml  docker-compose.s007.yml  docker-compose.yml
agents/ci_failure_reasoning_agent/: README.md  pyproject.toml
agents/ci_failure_reasoning_agent/src/ci_failure_reasoning_agent/: __init__.py  evidence_loader.py  main.py  output_schema.py  prompt_builder.py  providers.py  reasoner.py  renderer.py  schemas.py
agents/ci_failure_reasoning_agent/tests/: test_reasoning_agent.py
agents/unit_test_coverage_agent/: README.md  pyproject.toml
agents/unit_test_coverage_agent/src/unit_test_coverage_agent/: __init__.py  affected_services.py  assessment.py  detect_affected_services_cli.py  enforce_policy.py  git_diff.py  jacoco_loader.py  main.py  models.py  output_schema.py  patch_proposal.py  policy.py  pr_comment.py  pr_summary_comment.py  prompt_builder.py  providers.py  related_tests.py  renderer.py  surefire_loader.py
agents/unit_test_coverage_agent/tests/: test_langchain_provider_fallback.py  test_unit_test_coverage_agent.py
api-gateway/: pom.xml
audit-service/: README.md  pom.xml
docs/: agentic-cicd-poc.md  agentic-failure-triage.md  ai-diagnostics-contract.md  architecture.md  audit-service.md  changed-code-coverage-mapping.md  ci-failure-diagnostics.md  ci-failure-reasoning-agent.md  coverage-agent-branch-protection.md  coverage-patch-proposal-artifact.md  coverage-policy-configuration.md  coverage-pr-comment-integration.md  (+18 more)
(+163 files in other folders)
