[project]
name = "ci-failure-reasoning-agent"
version = "0.1.0"
description = "Read-only CI failure reasoning agent scaffold for deterministic evidence packs"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ci-failure-reasoning-agent = "ci_failure_reasoning_agent.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
