[project]
name = "unit-test-coverage-agent"
version = "0.1.0"
description = "Deterministic unit test coverage evidence agent scaffold"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
unit-test-coverage-agent = "unit_test_coverage_agent.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
