[project]
name = "unit-test-coverage-agent"
version = "0.2.0"
description = "Unit test coverage evidence and optional LangChain reasoning agent"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0"
]

[project.scripts]
unit-test-coverage-agent = "unit_test_coverage_agent.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
